# RsVecAlgebra

./: Cargo.toml  README.md
libs-2d/: Cargo.toml
libs-2d/src/: lib.rs
libs-2d/src/modules/: tests.rs
libs-2d/src/modules/line2d/: Cargo.toml
libs-2d/src/modules/line2d/src/: lib.rs
libs-2d/src/modules/point2d/: Cargo.toml
libs-2d/src/modules/point2d/src/: lib.rs
libs-2d/src/modules/tests/: line2d_tests.rs  point2d_tests.rs  vector2d.tests.rs  vector2d_tests.rs
libs-2d/src/modules/vector2d/: Cargo.toml
libs-2d/src/modules/vector2d/src/: lib.rs  vectorial-algebra.code-workspace
main-vector2d/: Cargo.toml
main-vector2d/src/: main.rs
